--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- start-header -->
     <header>
-        <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-light">
+        <nav class=" navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="image/logo.png" alt="">
@@ -148,7 +148,7 @@
                           <h5 class="card-title">$320</h5>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-success">Buy Now</button>
+                            <button class="panda-btn-now">Buy Now</button>
                         </div>
                       </div>
                     </div>
@@ -161,7 +161,7 @@
                           <h5 class="card-title">$350</h5>
                         </div>
                         <div class="m-3">
-                          <button class="btn btn-danger">Buy Now</button>
+                          <button class="panda-btn-now">Buy Now</button>
                         </div>
                       </div>
                     </div>
@@ -198,7 +198,7 @@
                           
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-success">Buy Now</button>
+                            <button class="panda-btn-now">Buy Now</button>
                         </div>
                       </div>
                     </div>
@@ -212,7 +212,7 @@
                           
                         </div>
                         <div class="m-3">
-                          <button class="btn btn-danger">Buy Now</button>
+                          <button class="panda-btn-now">Buy Now</button>
                         </div>
                       </div>
                     </div>
@@ -221,7 +221,7 @@
         </section>
     </main>
 
-    <section id="subscribe" class="container d-flex justify-content-center align-items-center bg-info mt-5" style="height: 300px">
+    <section id="subscribe" class="original-banner-color container d-flex justify-content-center align-items-center mt-5" style="height: 300px">
         <div>
             <h2>LET'S STAY IN TOUCH</h2>
             <p>Get updates on sales, specials and more</p>
@@ -233,7 +233,7 @@
 
     <footer>
         <p class="text-center mt-5"><small>
-            &copy; 2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+            &copy; 2025. Panda Commerce. All rights reserved. Sofia, Bulgaria.
         </small></p>
     </footer>
 
